[package]
name = "manifest-update"
version = "1.1.0"
description = "Update the package manifest of a Unity project to current versions"
edition = "2021"

[dependencies]
clap = { version = "^4.5.23", features = ["derive"] }
package-lib = { path = "../package-lib" }
serde = { version = "^1.0.216", features = ["derive"] }
serde_json = "^1.0.134"
