[package]
name = "manifest-update"
version = "1.1.0"
description = "Update the package manifest of a Unity project to current versions"
edition = "2024"

[dependencies]
clap = { version = "^4.5.31", features = ["derive"] }
package-lib = { path = "../package-lib" }
serde = { version = "^1.0.218", features = ["derive"] }
serde_json = "^1.0.140"
