[package]
name = "package-update"
version = "1.2.0"
description = "Helper tool to update UPM package versions and release notes"
edition = "2021"

[dependencies]
clap = { version = "^4.5.2", features = ["derive"] }
git2 = "^0.18.2"
owo-colors = "^4.0.0"
package-lib = { path = "../package-lib" }
serde_json = { version = "^1.0.114", features = ["preserve_order"] }
