[package]
name = "package-update"
version = "1.3.0"
description = "Helper tool to update UPM package versions and release notes"
edition = "2021"

[dependencies]
clap = { version = "^4.5.23", features = ["derive"] }
git2 = "^0.19.0"
owo-colors = "^4.1.0"
package-lib = { path = "../package-lib" }
serde_json = { version = "^1.0.134", features = ["preserve_order"] }
