[package]
name = "package-update"
version = "1.3.0"
description = "Helper tool to update UPM package versions and release notes"
edition = "2024"

[dependencies]
clap = { version = "^4.5.31", features = ["derive"] }
git2 = "^0.20.0"
owo-colors = "^4.2.0"
package-lib = { path = "../package-lib" }
serde_json = { version = "^1.0.140", features = ["preserve_order"] }
